# ReMKiT1D-Python

./: .coverage  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py  test.sh
RMK_support/: IO_support.py  __init__.py  amjuel_reader.py  amjuel_support.py  analysis_support.py  anisotropy.py  calculation_tree_support.py  common_models.py  common_variables.py  crm_support.py  dashboard_support.py  derivations.py  grid.py  init_templates.py  integrators.py  model_construction.py  remkit_context.py  rk_wrapper.py  setup.py  simple_containers.py  sk_normalization.py  stencils.py  tex_parsing.py  variable_container.py
RMK_support.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
anisotropic_plasma/: anisotropy.py
data/: Aki.csv
docs/: README.md  requirements.txt
examples/: ReMKiT1D_ES_test.ipynb  ReMKiT1D_MMS.ipynb  ReMKiT1D_SK_comp_staggered_isothermal.ipynb  ReMKiT1D_SK_comp_staggered_kin_thesis.ipynb  ReMKiT1D_SK_comp_staggered_thesis.ipynb  ReMKiT1D_advection_matrix_free.ipynb  ReMKiT1D_analysis.ipynb  ReMKiT1D_calculation_tree_model_example.ipynb  ReMKiT1D_cold_ion_test.ipynb  ReMKiT1D_crm_example.ipynb  ReMKiT1D_custom_fluid.ipynb  ReMKiT1D_ee_coll_test.ipynb  ReMKiT1D_ei_coll_test.ipynb  ReMKiT1D_kin_adv_test.ipynb  ReMKiT1D_kin_crm_test.ipynb  ReMKiT1D_kin_heating_test.ipynb  ReMKiT1D_kin_heating_test_drag.ipynb  ReMKiT1D_lbc_test.ipynb  ReMKiT1D_limiters_CVODE.ipynb  ReMKiT1D_poisson.ipynb  ReMKiT1D_poisson_fluid.ipynb  ReMKiT1D_pred_prey_CVODE.ipynb  ReMKiT1D_test_nd_interp.ipynb  anisotropy.py  (+23 more)
(+47 files in other folders)
